--- a/src/newProver/Untitled.ipynb
+++ b/src/newProver/Untitled.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 332,
    "id": "72d5cfb5-1274-4c4a-9e32-16488eac48c1",
    "metadata": {},
    "outputs": [],
@@ -54,6 +54,9 @@
     "    \n",
     "    def toField(self, x):\n",
     "        return x % self.modulus\n",
+    "    \n",
+    "    def neg(self, x):\n",
+    "        return -x % self.modulus\n",
     "\n",
     "    # Modular inverse using the extended Euclidean algorithm\n",
     "    def inv(self, a):\n",
@@ -184,12 +187,21 @@
     "        ratios = np.array([(f.numerator, f.denominator) for f in fractions])\n",
     "        factor = np.lcm.reduce(ratios[:,1])\n",
     "        result = [round(v * factor) for v in fn.c]\n",
-    "        return result, factor, 0\n"
+    "        return result, factor, 0\n",
+    "    \n",
+    "    def isZero(self, a):\n",
+    "        return np.all(np.array(a) == 0)\n",
+    "    \n",
+    "    def dimension_change(self, a, init_order):\n",
+    "        newPoly = []\n",
+    "        for i in a:\n",
+    "            newPoly.append(i[0][0])\n",
+    "        return newPoly, init_order\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 333,
    "id": "3bbe90ae-08ed-4533-8f92-0fcd81b01617",
    "metadata": {},
    "outputs": [],
@@ -202,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 334,
    "id": "5bdbef09-fe68-4d81-aeef-63b5d81997fb",
    "metadata": {},
    "outputs": [],
@@ -215,40 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": null,
    "id": "ab780250-4c1c-4aa0-801b-d718b2903138",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "G1 = bn128_curve.G1\n",
-    "G2 = bn128_curve.G2\n",
-    "\n",
-    "srsD = n * 3\n",
-    "gNegativeX = [bn128_curve.multiply(bn128_curve.G1, field.exp(srsX, -i)) for i in range(1,srsD)]\n",
-    "gPositiveX = [bn128_curve.multiply(bn128_curve.G1, field.exp(srsX, i)) for i in range(0,srsD)]\n",
-    "# hNegativeX = [bn128_curve.multiply(bn128_curve.G2, field.exp(srsX, -i)) for i in range(1,srsD)]\n",
-    "hPositiveX = [bn128_curve.multiply(bn128_curve.G2, field.exp(srsX, i)) for i in range(0,2)]\n",
-    "\n",
-    "# gNegativeAlphaX = [bn128_curve.multiply(bn128_curve.G1, field.mul(srsAlpha, field.exp(srsX, -i))) for i in range(1,srsD)]\n",
-    "# gPositiveAlphaX = [bn128_curve.multiply(bn128_curve.G1, field.mul(srsAlpha, field.exp(srsX, i))) for i in range(1,srsD)]\n",
-    "# hNegativeAlphaX = [bn128_curve.multiply(bn128_curve.G2, field.mul(srsAlpha, field.exp(srsX, -i))) for i in range(1,srsD)]\n",
-    "# hPositiveAlphaX = [bn128_curve.multiply(bn128_curve.G2, field.mul(srsAlpha, field.exp(srsX, i))) for i in range(0,srsD)]\n",
-    "\n",
-    "\n",
-    "# srs = [bn128_curve.multiply(bn128_curve.G1, 1), bn128_curve.multiply(bn128_curve.G1, int(s)), \n",
-    "#       bn128_curve.multiply(bn128_curve.G1, int(s**2)), bn128_curve.multiply(bn128_curve.G1, int(s**3)), \n",
-    "#       bn128_curve.multiply(bn128_curve.G1, int(s**4)), bn128_curve.multiply(bn128_curve.G1, int(s**5)), \n",
-    "#       bn128_curve.multiply(bn128_curve.G1, int(s**6)), bn128_curve.multiply(bn128_curve.G1, int(s**7)), \n",
-    "#       bn128_curve.multiply(bn128_curve.G1, int(s**8)), bn128_curve.multiply(bn128_curve.G1, int(s**9)), \n",
-    "#       bn128_curve.multiply(bn128_curve.G1, int(s**10)), bn128_curve.multiply(bn128_curve.G1, int(s**11)), \n",
-    "#       bn128_curve.multiply(bn128_curve.G1, int(s**12)), bn128_curve.multiply(bn128_curve.G1, int(s**13)), \n",
-    "#       bn128_curve.multiply(bn128_curve.G1, int(s**14)), bn128_curve.multiply(bn128_curve.G1, int(s**15)), \n",
-    "#       bn128_curve.multiply(bn128_curve.G2, 1), bn128_curve.multiply(bn128_curve.G2, int(s))]\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 335,
    "id": "53151451-b098-44d6-8dc7-6b0dd2381709",
    "metadata": {},
    "outputs": [],
@@ -292,105 +279,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 336,
    "id": "20566e3a-52c4-4f9a-9637-467f38d9f573",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "([([1296, 0, 0, 0, 0], -4),\n",
-       "  ([1296, 1296, 0, 0, 0], -4),\n",
-       "  ([144, 1296, 144, 0, 0, 0, 0, 0, 0, 36, 0, 0], -4),\n",
-       "  ([324, 144, 144, 324, 0, 0, 0, 0, 36, 36, 0, 0], -4),\n",
-       "  ([0, 324, 16, 324, 0, 0, 0, 0, 36, 4, 0, 0], -4),\n",
-       "  ([144, 0, 36, 36, 0, 144, 0, 0, 4, 9, 36, 0], -4),\n",
-       "  ([324, 144, 0, 81, 0, 144, 324, 0, 9, 0, 36, 36], -4),\n",
-       "  ([324,\n",
-       "    16,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495581,\n",
-       "    0,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495597,\n",
-       "    324,\n",
-       "    36,\n",
-       "    0,\n",
-       "    4,\n",
-       "    4,\n",
-       "    36],\n",
-       "   -3),\n",
-       "  ([0, 0, 0, 0, 0, 0, 0, 0, 0, 0], -2),\n",
-       "  ([21888242871839275222246405745257275088548364400416034343698204186575808495581,\n",
-       "    77,\n",
-       "    0,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495613,\n",
-       "    45,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495585,\n",
-       "    9,\n",
-       "    0,\n",
-       "    0,\n",
-       "    9],\n",
-       "   -2),\n",
-       "  ([21888242871839275222246405745257275088548364400416034343698204186575808495613,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495608,\n",
-       "    0,\n",
-       "    7,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495613,\n",
-       "    5,\n",
-       "    0,\n",
-       "    0,\n",
-       "    4,\n",
-       "    0],\n",
-       "   -2),\n",
-       "  ([21888242871839275222246405745257275088548364400416034343698204186575808495608,\n",
-       "    0,\n",
-       "    0,\n",
-       "    36,\n",
-       "    27,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495608,\n",
-       "    0,\n",
-       "    0,\n",
-       "    9,\n",
-       "    4],\n",
-       "   -2),\n",
-       "  ([0,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495613,\n",
-       "    0,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495613,\n",
-       "    81,\n",
-       "    4,\n",
-       "    0,\n",
-       "    0,\n",
-       "    0,\n",
-       "    9],\n",
-       "   -2),\n",
-       "  ([21888242871839275222246405745257275088548364400416034343698204186575808495613,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495608,\n",
-       "    0,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495608,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495613,\n",
-       "    5,\n",
-       "    0,\n",
-       "    0,\n",
-       "    0,\n",
-       "    0],\n",
-       "   -2),\n",
-       "  ([21888242871839275222246405745257275088548364400416034343698204186575808495608,\n",
-       "    0,\n",
-       "    0,\n",
-       "    0,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495608,\n",
-       "    21888242871839275222246405745257275088548364400416034343698204186575808495608,\n",
-       "    0,\n",
-       "    0,\n",
-       "    0,\n",
-       "    0],\n",
-       "   -2)],\n",
-       " -8)"
-      ]
-     },
-     "execution_count": 293,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<string>:6: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n"
+     ]
     }
    ],
    "source": [
@@ -421,12 +319,6 @@
     "def kPoly(k, n, q):\n",
     "    return [[field.mul_by_const(field.sparse(dict(zip(np.arange(n+1, n+q+1), k))), -1)], 0]\n",
     "\n",
-    "# def sparse(coeff_dict):\n",
-    "#     degree = max(coeff_dict.keys()) - min(coeff_dict.keys())\n",
-    "#     o = [0] * (degree + 1)\n",
-    "#     for k, v in coeff_dict.items():\n",
-    "#         o[k - min(coeff_dict.keys())] = v % order\n",
-    "#     return (o, min(coeff_dict.keys()))\n",
     "sXY = sPoly(u,v,w,n,q)\n",
     "# rXY = rPoly(aL,aR,aO,n)\n",
     "rXY = rPoly(aL,aR,aO,n)\n",
@@ -444,24 +336,109 @@
     "cX\n",
     "cX = field.add_polys_bivar(cX[0], neg_kXY[0], cX[1], neg_kXY[1])\n",
     "\n",
-    "cX\n"
+    "# cX\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 344,
    "id": "5af19511-47ec-4bd1-b490-c3694d9b2fc4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class KZGCommitment():\n",
+    "    def __init__(self, n, srsX, srsAlpha, field):\n",
+    "        self.G1 = bn128_curve.G1\n",
+    "        self.G2 = bn128_curve.G2\n",
+    "        self.srsD = n * 5\n",
+    "        self.gNegativeX = [bn128_curve.multiply(bn128_curve.G1, field.exp(srsX, -i)) for i in range(1,self.srsD)]\n",
+    "        self.gPositiveX = [bn128_curve.multiply(bn128_curve.G1, field.exp(srsX, i)) for i in range(0,self.srsD)]\n",
+    "        # hNegativeX = [bn128_curve.multiply(bn128_curve.G2, field.exp(srsX, -i)) for i in range(1,srsD)]\n",
+    "        self.hPositiveX = [bn128_curve.multiply(bn128_curve.G2, field.exp(srsX, i)) for i in range(0,2)]\n",
+    "        self.field = field\n",
+    "# gNegativeAlphaX = [bn128_curve.multiply(bn128_curve.G1, field.mul(srsAlpha, field.exp(srsX, -i))) for i in range(1,srsD)]\n",
+    "# gPositiveAlphaX = [bn128_curve.multiply(bn128_curve.G1, field.mul(srsAlpha, field.exp(srsX, i))) for i in range(1,srsD)]\n",
+    "# hNegativeAlphaX = [bn128_curve.multiply(bn128_curve.G2, field.mul(srsAlpha, field.exp(srsX, -i))) for i in range(1,srsD)]\n",
+    "# hPositiveAlphaX = [bn128_curve.multiply(bn128_curve.G2, field.mul(srsAlpha, field.exp(srsX, i))) for i in range(0,srsD)]\n",
+    "\n",
+    "    def commit(self, p, init_order):\n",
+    "        c = None\n",
+    "        for i in range(len(p)):\n",
+    "            if init_order + i < 0:\n",
+    "                if c is None:\n",
+    "                    c = bn128_curve.multiply(self.gNegativeX[abs(init_order + i)-1], p[i])\n",
+    "                else:\n",
+    "                    c = bn128_curve.add(bn128_curve.multiply(self.gNegativeX[abs(init_order + i)-1], p[i]), c)\n",
+    "            else:\n",
+    "                if c is None:\n",
+    "                    c = bn128_curve.multiply(self.gPositiveX[init_order + i], p[i])\n",
+    "                else:\n",
+    "                    c = bn128_curve.add(bn128_curve.multiply(self.gPositiveX[init_order + i], p[i]), c)\n",
+    "        return c\n",
+    "    \n",
+    "    \n",
+    "    def openC(self, c, z, p, init_order):\n",
+    "        fz = self.field.eval_poly_at(p, z, init_order)\n",
+    "        dummy_dict = {}\n",
+    "        dummy_dict[0] = fz\n",
+    "        dummy_poly = self.field.mul_by_const(self.field.sparse(dummy_dict), -1)\n",
+    "        numerator = self.field.add_polys(p, dummy_poly[0], init_order, dummy_poly[1])\n",
+    "        dummy_dict = {}\n",
+    "        dummy_dict[0] = -z\n",
+    "        dummy_dict[1] = 1\n",
+    "        denominator = self.field.sparse(dummy_dict)\n",
+    "        qx = self.field.div_polys(numerator[0], denominator[0], numerator[1], denominator[1])\n",
+    "        return self.commit(qx[0], qx[1]), fz\n",
+    "    \n",
+    "    def verify(self, c, z, fz, w):\n",
+    "        leftleft = bn128_curve.add(c, bn128_curve.multiply(self.G1, self.field.neg(fz)))\n",
+    "        leftright = self.hPositiveX[0]\n",
+    "        rightleft = w\n",
+    "        rightright = bn128_curve.add(self.hPositiveX[1], bn128_curve.multiply(self.G2, self.field.neg(z)))\n",
+    "        \n",
+    "        e_left = bn128_pairing.pairing(leftright, leftleft)\n",
+    "        e_right = bn128_pairing.pairing(rightright, rightleft)\n",
+    "        return e_left == e_right\n",
+    "    \n",
+    "\n",
+    "cmScheme = KZGCommitment(n, srsX, srsAlpha, field)\n",
+    "\n",
+    "r1X = field.dimension_change(rX1[0], rX1[1])\n",
+    "r1X\n",
+    "c = cmScheme.commit(r1X[0], r1X[1])\n",
+    "c\n",
+    "# bn128_curve.is_on_curve(c, bn128_curve.b)\n",
+    "proof = cmScheme.openC(c, 1, r1X[0], r1X[1])\n",
+    "proof\n",
+    "\n",
+    "verify = cmScheme.verify(c, 1, proof[1], proof[0])\n",
+    "\n",
+    "verify\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 345,
    "id": "61c85177-27dd-4e65-84d1-16fd91a78f81",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 345,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# verify"
+   ]
   },
   {
    "cell_type": "code",
