batch commit finish

--- a/src/newProver/Untitled.ipynb
+++ b/src/newProver/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "id": "635c3b23-574e-42a5-9d1f-3f02078cbb6b",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 57,
    "id": "72d5cfb5-1274-4c4a-9e32-16488eac48c1",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,12 @@
     "        return ([((a[i-init_order_a+init_order_result] if (i-init_order_a+init_order_result < len(a) and i-init_order_a+init_order_result >= 0) else 0) + \n",
     "                  (b[i-init_order_b+init_order_result] if (i-init_order_b+init_order_result < len(b) and i-init_order_b+init_order_result >= 0) else 0))\n",
     "                % self.modulus for i in range(max(len(a)+init_order_a, len(b)+init_order_b)-init_order_result)], init_order_result)\n",
-    "\n",
+    "    \n",
+    "    def sub_polys(self, a, b, init_order_a = 0, init_order_b = 0):\n",
+    "        neg_b = self.mul_by_const([b,init_order_b], -1)\n",
+    "        return self.add_polys(a, neg_b[0], init_order_a, neg_b[1])\n",
+    "        \n",
+    "        \n",
     "        # Arithmetic for polynomials\n",
     "    def add_polys_bivar(self, a, b, init_order_a = 0, init_order_b = 0):\n",
     "        init_order_result = min(init_order_a, init_order_b)\n",
@@ -179,15 +184,33 @@
     "        return (o, min(coeff_dict.keys()))\n",
     "    \n",
     "    def lagrange(self, xs, ys):\n",
-    "        fn = lagrange(xs, ys)\n",
+    "#         fn = lagrange(xs, ys)\n",
     "        \n",
-    "        MAX_DENOM = 100\n",
-    "        fractions = [Fraction(val).limit_denominator(MAX_DENOM)\n",
-    "                     for val in fn.c]\n",
-    "        ratios = np.array([(f.numerator, f.denominator) for f in fractions])\n",
-    "        factor = np.lcm.reduce(ratios[:,1])\n",
-    "        result = [round(v * factor) for v in fn.c]\n",
-    "        return result, factor, 0\n",
+    "#         MAX_DENOM = 100\n",
+    "#         fractions = [Fraction(val).limit_denominator(MAX_DENOM)\n",
+    "#                      for val in fn.c]\n",
+    "#         ratios = np.array([(f.numerator, f.denominator) for f in fractions])\n",
+    "#         factor = np.lcm.reduce(ratios[:,1])\n",
+    "#         result = [round(v * factor) for v in fn.c]\n",
+    "#         final = [self.div(v, factor) for v in result]\n",
+    "#         return final, factor, 0\n",
+    "        fn = None\n",
+    "        for i, y in enumerate(ys):\n",
+    "            xlist = xs[:i]+xs[i+1:]\n",
+    "            xpoly = [list(np.array(np.poly1d(xlist, True).c)[::-1].astype(int)), 0]\n",
+    "            denominator = 1\n",
+    "            for x in xlist:\n",
+    "                denominator *= xs[i] - x\n",
+    "                \n",
+    "            pi = self.mul_by_const(xpoly, self.inv(denominator))\n",
+    "            pi = self.mul_by_const(pi, y)\n",
+    "            \n",
+    "            if fn is None:\n",
+    "                fn = pi\n",
+    "            else:\n",
+    "                fn = self.add_polys(fn[0], pi[0], fn[1], pi[1])\n",
+    "                \n",
+    "        return fn\n",
     "    \n",
     "    def isZero(self, a):\n",
     "        return np.all(np.array(a) == 0)\n",
@@ -201,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 58,
    "id": "3bbe90ae-08ed-4533-8f92-0fcd81b01617",
    "metadata": {},
    "outputs": [],
@@ -214,7 +237,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 59,
+   "id": "2401d995-4c99-42ed-8ecd-16cc35e9a391",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([3, 1, 0], 0)"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "field.lagrange([1, 2, 3], [4, 5, 6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
    "id": "5bdbef09-fe68-4d81-aeef-63b5d81997fb",
    "metadata": {},
    "outputs": [],
@@ -235,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 61,
    "id": "53151451-b098-44d6-8dc7-6b0dd2381709",
    "metadata": {},
    "outputs": [],
@@ -279,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 62,
    "id": "20566e3a-52c4-4f9a-9637-467f38d9f573",
    "metadata": {},
    "outputs": [
@@ -343,10 +387,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 63,
    "id": "5af19511-47ec-4bd1-b490-c3694d9b2fc4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((5190796697715119883934102366996847331797199029631160583606299153098083266525,\n",
+       "  4554230131262046564885494406816885255811997468953513222916360853967997521506),\n",
+       " 98)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class KZGCommitment():\n",
     "    def __init__(self, n, srsX, srsAlpha, field):\n",
@@ -413,15 +470,15 @@
     "proof = cmScheme.openC(c, 1, r1X[0], r1X[1])\n",
     "proof\n",
     "\n",
-    "verify = cmScheme.verify(c, 1, proof[1], proof[0])\n",
+    "# verify = cmScheme.verify(c, 1, proof[1], proof[0])\n",
     "\n",
-    "verify\n",
+    "# verify\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 76,
    "id": "61c85177-27dd-4e65-84d1-16fd91a78f81",
    "metadata": {},
    "outputs": [
@@ -431,19 +488,234 @@
        "True"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# verify"
+    "class KZGBatchCommitment():\n",
+    "    def __init__(self, n, srsX, srsAlpha, field):\n",
+    "        self.G1 = bn128_curve.G1\n",
+    "        self.G2 = bn128_curve.G2\n",
+    "        self.srsD = n * 5\n",
+    "        self.gNegativeX = [bn128_curve.multiply(bn128_curve.G1, field.exp(srsX, -i)) for i in range(1,self.srsD)]\n",
+    "        self.gPositiveX = [bn128_curve.multiply(bn128_curve.G1, field.exp(srsX, i)) for i in range(0,self.srsD)]\n",
+    "        self.hPositiveX = [bn128_curve.multiply(bn128_curve.G2, field.exp(srsX, i)) for i in range(0,2)]\n",
+    "        self.field = field\n",
+    "        self.srsX = srsX\n",
+    "\n",
+    "    def commit(self, list_of_p, list_of_init_order):\n",
+    "        list_of_c = []\n",
+    "        for j, p in enumerate(list_of_p):\n",
+    "            c = None\n",
+    "            init_order = list_of_init_order[j]\n",
+    "            for i in range(len(p)):\n",
+    "                if init_order + i < 0:\n",
+    "                    if c is None:\n",
+    "                        c = bn128_curve.multiply(self.gNegativeX[abs(init_order + i)-1], p[i])\n",
+    "                    else:\n",
+    "                        c = bn128_curve.add(bn128_curve.multiply(self.gNegativeX[abs(init_order + i)-1], p[i]), c)\n",
+    "                else:\n",
+    "                    if c is None:\n",
+    "                        c = bn128_curve.multiply(self.gPositiveX[init_order + i], p[i])\n",
+    "                    else:\n",
+    "                        c = bn128_curve.add(bn128_curve.multiply(self.gPositiveX[init_order + i], p[i]), c)\n",
+    "            list_of_c.append(c)\n",
+    "            \n",
+    "        return list_of_c\n",
+    "    \n",
+    "    \n",
+    "    def openC(self, list_of_c, list_of_z_for_p, list_of_p, list_of_init_order):\n",
+    "        \n",
+    "        # evaluate all polynomials at all points and then interpolations\n",
+    "        list_of_fz = []\n",
+    "        list_of_all_z = list(set().union(*list_of_z_for_p))\n",
+    "        list_of_gamma = []\n",
+    "        zTx = list(np.array(np.poly1d(list_of_all_z, True).c)[::-1].astype(int))\n",
+    "#         print(zTx)\n",
+    "        list_of_zSix = []\n",
+    "        fx = [[0],0]\n",
+    "        fxz = [[0],0]\n",
+    "        beta = 1\n",
+    "        rand_z = 6\n",
+    "        for i, p in enumerate(list_of_p):\n",
+    "            list_of_fz_p = []\n",
+    "            # compute all p(z) for z \\in S_i\n",
+    "            for z in list_of_z_for_p[i]:\n",
+    "                list_of_fz_p.append(self.field.eval_poly_at(p, z, list_of_init_order[i]))\n",
+    "                \n",
+    "            list_of_fz.append(list_of_fz_p)\n",
+    "            \n",
+    "            # compute r_i\n",
+    "            gamma_p = self.field.lagrange(list_of_z_for_p[i], list_of_fz_p)\n",
+    "#             print(f\"gamma_p: {gamma_p}\")\n",
+    "#             gamma_p = [list((np.array(gamma_p[0])/gamma_p[1])), gamma_p[2]]            \n",
+    "            # compute z_{T\\Si}\n",
+    "            SExSi = list(set(list_of_all_z) ^ set(list_of_z_for_p[i]))\n",
+    "            zSix = list(np.array(np.poly1d(SExSi, True).c)[::-1].astype(int))\n",
+    "#             print(zSix)\n",
+    "\n",
+    "            # f_i(x)-r_i(x)\n",
+    "            sub_poly = self.field.sub_polys(p, gamma_p[0], list_of_init_order[i], gamma_p[1])\n",
+    "            # z_{T\\Si}*[f_i(x)-r_i(x)]\n",
+    "            part_poly = self.field.mul_polys(zSix, sub_poly[0], 0, sub_poly[1])\n",
+    "            # beta^i * z_{T\\Si}*[f_i(x)-r_i(x)]\n",
+    "            part_poly = self.field.mul_by_const(part_poly, beta**i)\n",
+    "            # summation\n",
+    "            fx = self.field.add_polys(fx[0], part_poly[0], fx[1], part_poly[1])\n",
+    "#             test = 4\n",
+    "#             print(self.field.eval_poly_at(p, test, list_of_init_order[i]))\n",
+    "#             print(self.field.eval_poly_at(gamma_p[0], test, gamma_p[1]))\n",
+    "#             print(self.field.eval_poly_at(part_poly[0], test, part_poly[1]))\n",
+    "#             print(list_of_fz_p)\n",
+    "            \n",
+    "            # r_i(z)\n",
+    "            eval_gamma = [[self.field.eval_poly_at(gamma_p[0], rand_z, gamma_p[1])],0]\n",
+    "            list_of_gamma.append(eval_gamma[0][0])\n",
+    "            # compute z_{T\\Si}(z)\n",
+    "            eval_zSix = [[self.field.eval_poly_at(zSix, rand_z, 0)],0]\n",
+    "            list_of_zSix.append(eval_zSix[0][0])\n",
+    "            # f_i(x)-r_i(z)\n",
+    "            sub_poly = self.field.sub_polys(p, eval_gamma[0], list_of_init_order[i], eval_gamma[1])\n",
+    "            # z_{T\\Si}(z)*[f_i(x)-r_i(z)]\n",
+    "            part_poly = self.field.mul_polys(eval_zSix[0], sub_poly[0], 0, sub_poly[1])\n",
+    "            # beta^i * z_{T\\Si}(z)*[f_i(x)-r_i(z)]\n",
+    "            part_poly = self.field.mul_by_const(part_poly, beta**i)\n",
+    "            fxz = self.field.add_polys(fxz[0], part_poly[0], fxz[1], part_poly[1])\n",
+    "        \n",
+    "        # f/Z_T\n",
+    "        px = self.field.div_polys(fx[0], zTx, fx[1], 0)\n",
+    "        test = 6\n",
+    "#         print(self.field.div(self.field.eval_poly_at(fx[0], test, fx[1]),self.field.eval_poly_at(zTx, test, 0)))\n",
+    "#         print(self.field.eval_poly_at(px[0], test, px[1]))\n",
+    "        \n",
+    "        # Z_T(z)\n",
+    "        eval_zt = self.field.eval_poly_at(zTx, rand_z, 0)\n",
+    "        # f/Z_T * Z_T(z)\n",
+    "        l_second_half = self.field.mul_by_const(px, eval_zt)\n",
+    "        # L = beta^i * z_{T\\Si}(z)*[f_i(x)-r_i(z)] - f/Z_T * Z_T(z)\n",
+    "        lx = self.field.sub_polys(fxz[0], l_second_half[0], fxz[1], l_second_half[1])\n",
+    "#         print(self.field.eval_poly_at(lx[0], 13295, lx[1])/(13295-rand_z))\n",
+    "        # L / (x-z)\n",
+    "        lx = self.field.div_polys(lx[0], [-rand_z, 1], lx[1], 0)\n",
+    "#         print(self.field.eval_poly_at(lx[0], 13295, lx[1]))\n",
+    "#         print(lx)\n",
+    "        \n",
+    "        w = self.commit([px[0]], [px[1]])\n",
+    "        wDash = self.commit([lx[0]], [lx[1]])        \n",
+    "        \n",
+    "        return w[0], wDash[0], rand_z, beta, list_of_fz, list_of_gamma, list_of_zSix, eval_zt\n",
+    "        \n",
+    "    def verify(self, list_of_c, w, wDash, rand_z, beta, list_of_fz, list_of_gamma, list_of_zSix, eval_zt):\n",
+    "        \n",
+    "        cm_poly = None\n",
+    "        ga_poly = 0\n",
+    "        for i, c in enumerate(list_of_c):\n",
+    "            gamma_p = list_of_gamma[i]\n",
+    "            zSix = list_of_zSix[i]\n",
+    "#             print(gamma_p)\n",
+    "#             print(zSix)\n",
+    "            if cm_poly == None:\n",
+    "                cm_poly = bn128_curve.multiply(c, zSix * beta**i)\n",
+    "            else:\n",
+    "                cm_poly = bn128_curve.add(bn128_curve.multiply(c, zSix * beta**i), cm_poly)\n",
+    "            ga_poly = self.field.add(gamma_p * zSix * beta**i, ga_poly)\n",
+    "        \n",
+    "        w_poly = bn128_curve.neg(bn128_curve.multiply(w, eval_zt))\n",
+    "        f_middle = bn128_curve.neg(bn128_curve.multiply(self.G1, ga_poly))\n",
+    "        f = bn128_curve.add(bn128_curve.add(cm_poly, f_middle), w_poly)\n",
+    "#         f = w\n",
+    "            \n",
+    "        leftleft = bn128_curve.add(f, bn128_curve.multiply(wDash, rand_z))\n",
+    "        leftright = self.G2\n",
+    "        rightleft = wDash\n",
+    "        rightright = self.hPositiveX[1]\n",
+    "        \n",
+    "        e_left = bn128_pairing.pairing(leftright, leftleft)\n",
+    "        e_right = bn128_pairing.pairing(rightright, rightleft)\n",
+    "        return e_left == e_right\n",
+    "#         return True\n",
+    "    \n",
+    "\n",
+    "cmScheme = KZGBatchCommitment(n, srsX, srsAlpha, field)\n",
+    "\n",
+    "# rX1 = field.eval_poly_Y(rXY[0], rXY[1], 1)\n",
+    "# r1X = field.dimension_change(rX1[0], rX1[1])\n",
+    "# rX2 = field.eval_poly_Y(rXY[0], rXY[1], 2)\n",
+    "# r2X = field.dimension_change(rX2[0], rX2[1])\n",
+    "\n",
+    "r1X = [[1, 2, 3], 1]\n",
+    "r2X = [[4, 5, 6], 1]\n",
+    "\n",
+    "c = cmScheme.commit([r1X[0], r2X[0]], [r1X[1], r2X[1]])\n",
+    "c\n",
+    "# bn128_curve.is_on_curve(c[0], bn128_curve.b)\n",
+    "proof = cmScheme.openC(c, [[1,2,3],[4,5]], [r1X[0], r2X[0]], [r1X[1], r2X[1]])\n",
+    "proof\n",
+    "\n",
+    "verify = cmScheme.verify(c, proof[0], proof[1], proof[2], proof[3], proof[4], proof[5], proof[6], proof[7])\n",
+    "\n",
+    "verify\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "32398765-1867-4395-8dbd-dafba5c8030d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17510594297471420177797124596205820070838691520332827474958563349260646796494"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "field.mul(4, field.inv(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "b677b9d6-05a5-4921-a465-f27a65d5def4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# field = PrimeField(11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "ca41d713-b347-4b13-a785-1cd5d1713978",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "40 % 11"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32398765-1867-4395-8dbd-dafba5c8030d",
+   "id": "9464174a-89e4-43a7-a4c2-0d0285329acd",
    "metadata": {},
    "outputs": [],
    "source": []
