--- a/src/RSP/test.ipynb
+++ b/src/RSP/test.ipynb
@@ -1516,6 +1516,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"../../output/proof.txt\") as f:\n",
+    "    items = f.readline().split(\"P\")\n",
+    "    print(len(items))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 119,
    "metadata": {},
    "outputs": [
@@ -1821,7 +1840,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.7 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1835,9 +1854,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
@@ -1845,5 +1863,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
