--- a/src/newProver/Untitled.ipynb
+++ b/src/newProver/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "635c3b23-574e-42a5-9d1f-3f02078cbb6b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "72d5cfb5-1274-4c4a-9e32-16488eac48c1",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "d7f4fe75-d43d-4c0f-8b43-00d65071b906",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "3bbe90ae-08ed-4533-8f92-0fcd81b01617",
    "metadata": {},
    "outputs": [],
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "53151451-b098-44d6-8dc7-6b0dd2381709",
    "metadata": {},
    "outputs": [],
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "20566e3a-52c4-4f9a-9637-467f38d9f573",
    "metadata": {},
    "outputs": [],
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "5af19511-47ec-4bd1-b490-c3694d9b2fc4",
    "metadata": {},
    "outputs": [],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "db4ec553-a537-4ba7-b0be-8622f2fc4f64",
    "metadata": {},
    "outputs": [],
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "61c85177-27dd-4e65-84d1-16fd91a78f81",
    "metadata": {},
    "outputs": [],
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "aaf99a63-57f9-45d3-b9db-4a4420de2ad7",
    "metadata": {},
    "outputs": [],
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "5dcaec23-8638-49c4-9d7a-15102befa0ec",
    "metadata": {},
    "outputs": [],
@@ -1217,7 +1217,7 @@
     "\n",
     "    return aL, aR, aO, k, u, v, w, n, q\n",
     "\n",
-    "def sonic_experiment(aL, aR, aO, k, u, v, w, n, q):\n",
+    "def sonic_experiment(size, aL, aR, aO, k, u, v, w, n, q, save=False, load=True):\n",
     "    \n",
     "    cmScheme = KZGBatchCommitment(n, srsX, srsAlpha, field)\n",
     "    \n",
@@ -1232,15 +1232,27 @@
     "    rXY = read_poly(polys[1])\n",
     "    tXY = read_poly(polys[-2])\n",
     "\n",
+    "    # with open(f\"../../output/polys-rsk-{size}.txt\", \"r\") as f:\n",
+    "    #     polys = f.readline()\n",
+    "    #     polys = polys.split(\"=\")[1:]\n",
+    "    #     last = polys[-1]\n",
+    "    #     polys = [x.rsplit(',', 1)[0].strip() for x in polys[:-1]]\n",
+    "    #     polys.append(last[:-1])\n",
+    "\n",
+    "    # sXY = read_poly(polys[0])\n",
+    "    # rXY = read_poly(polys[1])\n",
+    "    # tXY = read_poly(polys[-2])\n",
+    "\n",
     "    # sXY = sPoly(u,v,w,n,q)\n",
-    "    with open(f\"sXY_{size}.txt\", 'wb') as f:\n",
-    "        pickle.dump(sXY, f)\n",
-    "    # with open(f\"sXY_{size}.txt\", 'rb') as f:\n",
-    "    #     sXY = pickle.load(f)\n",
-    "            \n",
     "    neg_kXY = kPoly(k, n, q)\n",
-    "    with open(f\"neg_kXY_{size}.txt\", 'wb') as f:\n",
-    "        pickle.dump(neg_kXY, f)\n",
+    "    if save:\n",
+    "        with open(f\"sXY_{size}.txt\", 'wb') as f:\n",
+    "            pickle.dump(sXY, f)\n",
+    "        # with open(f\"sXY_{size}.txt\", 'rb') as f:\n",
+    "        #     sXY = pickle.load(f)\n",
+    "                \n",
+    "        with open(f\"neg_kXY_{size}.txt\", 'wb') as f:\n",
+    "            pickle.dump(neg_kXY, f)\n",
     "\n",
     "    st = time.process_time()\n",
     "\n",
@@ -1257,16 +1269,17 @@
     "    res = et - st\n",
     "    print('CPU Execution time-poly construction:', res, 'seconds')\n",
     "    \n",
-    "    with open(f\"rXY_{size}.txt\", 'wb') as f:\n",
-    "        pickle.dump(rXY, f)\n",
-    "    # with open(f\"r_dash_XY_{size}.txt\", 'wb') as f:\n",
-    "    #     pickle.dump(r_dash_XY, f)\n",
-    "    with open(f\"rX1_{size}.txt\", 'wb') as f:\n",
-    "        pickle.dump(rX1, f)\n",
-    "    # with open(f\"cX_{size}.txt\", 'wb') as f:\n",
-    "    #     pickle.dump(cX, f)\n",
-    "    with open(f\"tXY_{size}.txt\", 'wb') as f:\n",
-    "        pickle.dump(tXY, f)\n",
+    "    if save:\n",
+    "        with open(f\"rXY_{size}.txt\", 'wb') as f:\n",
+    "            pickle.dump(rXY, f)\n",
+    "        # with open(f\"r_dash_XY_{size}.txt\", 'wb') as f:\n",
+    "        #     pickle.dump(r_dash_XY, f)\n",
+    "        with open(f\"rX1_{size}.txt\", 'wb') as f:\n",
+    "            pickle.dump(rX1, f)\n",
+    "        # with open(f\"cX_{size}.txt\", 'wb') as f:\n",
+    "        #     pickle.dump(cX, f)\n",
+    "        with open(f\"tXY_{size}.txt\", 'wb') as f:\n",
+    "            pickle.dump(tXY, f)\n",
     "        \n",
     "    st = time.process_time()\n",
     "\n",
@@ -1323,6 +1336,7 @@
     "    fz_o = openOutsource[4]\n",
     "\n",
     "    et = time.process_time()\n",
+    "    \n",
     "    res = et - st\n",
     "    print('CPU Execution time - proof generation:', res, 'seconds')\n",
     "\n",
@@ -1340,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "id": "ad114f6c",
    "metadata": {},
    "outputs": [
@@ -1361,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "70b9243d",
    "metadata": {},
    "outputs": [
@@ -1382,7 +1396,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
+   "id": "0250356b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU Execution time-poly construction: 0.032823353000026145 seconds\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "CPU Execution time - proof generation: 607.5497766039999 seconds\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sonic_experiment(16, aL, aR, aO, k, u, v, w, n, q, True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "337ed5bf",
    "metadata": {},
    "outputs": [
@@ -1403,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "8834abf9",
    "metadata": {},
    "outputs": [
@@ -1424,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "0bedd69c",
    "metadata": {},
    "outputs": [
@@ -1445,7 +1492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "05a2678f",
    "metadata": {},
    "outputs": [
@@ -1466,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "62d18e87-67ea-4504-bdfd-6c0eaa4ea071",
    "metadata": {},
    "outputs": [
@@ -1478,28 +1525,25 @@
       "index=2\n",
       "length: (232,)\n",
       "constraints: (222,)\n",
-      "CPU Execution time-poly construction: 0.0015954950000001134 seconds\n",
-      "zero term with coefficient 0\n",
-      "zero term with coefficient 0\n",
-      "zero term with coefficient 0\n",
-      "zero term with coefficient 0\n",
-      "CPU Execution time - proof generation: 170.171399899 seconds\n"
+      "CPU Execution time-poly construction: 0.0016923080002015922 seconds\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'neg_kXY' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[23], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m [\u001b[39m4\u001b[39m, \u001b[39m8\u001b[39m, \u001b[39m16\u001b[39m, \u001b[39m32\u001b[39m, \u001b[39m64\u001b[39m]:\n\u001b[0;32m----> 2\u001b[0m     \u001b[39mprint\u001b[39m(sonic_experiment(s, \u001b[39m*\u001b[39;49msetup_data(s)), \u001b[39mFalse\u001b[39;00m)\n",
+      "Cell \u001b[0;32mIn[17], line 93\u001b[0m, in \u001b[0;36msonic_experiment\u001b[0;34m(size, aL, aR, aO, k, u, v, w, n, q, save, load)\u001b[0m\n\u001b[1;32m     90\u001b[0m g_max \u001b[39m=\u001b[39m \u001b[39m6\u001b[39m \u001b[39m*\u001b[39m n\n\u001b[1;32m     92\u001b[0m s1Y \u001b[39m=\u001b[39m field\u001b[39m.\u001b[39meval_poly_X(sXY[\u001b[39m0\u001b[39m], sXY[\u001b[39m1\u001b[39m], \u001b[39m1\u001b[39m)\n\u001b[0;32m---> 93\u001b[0m kY \u001b[39m=\u001b[39m field\u001b[39m.\u001b[39mmul_by_const(neg_kXY[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m], \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     94\u001b[0m kY\n\u001b[1;32m     95\u001b[0m \u001b[39m# setup: commit Sy, k\u001b[39;00m\n",
+      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'neg_kXY' referenced before assignment"
+     ]
     }
    ],
    "source": [
-    "for s in [4, 8, 16, 32, 64, 128]:\n",
-    "    sonic_experiment(setup_data(s))"
+    "for s in [4, 8, 16, 32, 64]:\n",
+    "    print(sonic_experiment(s, *setup_data(s)), False)"
    ]
   },
   {
