--- a/src/newProver/Untitled.ipynb
+++ b/src/newProver/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "635c3b23-574e-42a5-9d1f-3f02078cbb6b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "72d5cfb5-1274-4c4a-9e32-16488eac48c1",
    "metadata": {},
    "outputs": [],
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "d7f4fe75-d43d-4c0f-8b43-00d65071b906",
    "metadata": {},
    "outputs": [],
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3bbe90ae-08ed-4533-8f92-0fcd81b01617",
    "metadata": {},
    "outputs": [],
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "53151451-b098-44d6-8dc7-6b0dd2381709",
    "metadata": {},
    "outputs": [],
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "20566e3a-52c4-4f9a-9637-467f38d9f573",
    "metadata": {},
    "outputs": [],
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "5af19511-47ec-4bd1-b490-c3694d9b2fc4",
    "metadata": {},
    "outputs": [],
@@ -765,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "db4ec553-a537-4ba7-b0be-8622f2fc4f64",
    "metadata": {},
    "outputs": [],
@@ -850,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "61c85177-27dd-4e65-84d1-16fd91a78f81",
    "metadata": {},
    "outputs": [],
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "aaf99a63-57f9-45d3-b9db-4a4420de2ad7",
    "metadata": {},
    "outputs": [],
@@ -1189,7 +1189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "5dcaec23-8638-49c4-9d7a-15102befa0ec",
    "metadata": {},
    "outputs": [],
@@ -1396,35 +1396,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "0250356b",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU Execution time-poly construction: 0.032823353000026145 seconds\n",
-      "zero term with coefficient 0\n",
-      "zero term with coefficient 0\n",
-      "zero term with coefficient 0\n",
-      "zero term with coefficient 0\n",
-      "CPU Execution time - proof generation: 607.5497766039999 seconds\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
-    "sonic_experiment(16, aL, aR, aO, k, u, v, w, n, q, True)"
+    "sonic_experiment(64, aL, aR, aO, k, u, v, w, n, q, True)"
    ]
   },
   {
@@ -1471,7 +1465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "0bedd69c",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "62d18e87-67ea-4504-bdfd-6c0eaa4ea071",
    "metadata": {},
    "outputs": [
@@ -1525,19 +1519,66 @@
       "index=2\n",
       "length: (232,)\n",
       "constraints: (222,)\n",
-      "CPU Execution time-poly construction: 0.0016923080002015922 seconds\n"
+      "CPU Execution time-poly construction: 0.0018929759999082307 seconds\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "CPU Execution time - proof generation: 168.88052936500003 seconds\n",
+      "True False\n",
+      "G=6\n",
+      "index=5\n",
+      "length: (400,)\n",
+      "constraints: (378,)\n",
+      "CPU Execution time-poly construction: 0.2845842310000535 seconds\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "CPU Execution time - proof generation: 301.57728522599996 seconds\n",
+      "True False\n",
+      "G=11\n",
+      "index=10\n",
+      "length: (736,)\n",
+      "constraints: (690,)\n",
+      "CPU Execution time-poly construction: 0.005956065999953353 seconds\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "CPU Execution time - proof generation: 601.8661178790001 seconds\n",
+      "True False\n",
+      "G=21\n",
+      "index=20\n",
+      "length: (1408,)\n",
+      "constraints: (1314,)\n",
+      "CPU Execution time-poly construction: 0.01693511600024067 seconds\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "zero term with coefficient 0\n",
+      "CPU Execution time - proof generation: 1330.689524985 seconds\n",
+      "True False\n",
+      "G=41\n",
+      "index=40\n",
+      "length: (2752,)\n",
+      "constraints: (2562,)\n"
      ]
     },
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'neg_kXY' referenced before assignment",
+     "ename": "",
+     "evalue": "",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[23], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfor\u001b[39;00m s \u001b[39min\u001b[39;00m [\u001b[39m4\u001b[39m, \u001b[39m8\u001b[39m, \u001b[39m16\u001b[39m, \u001b[39m32\u001b[39m, \u001b[39m64\u001b[39m]:\n\u001b[0;32m----> 2\u001b[0m     \u001b[39mprint\u001b[39m(sonic_experiment(s, \u001b[39m*\u001b[39;49msetup_data(s)), \u001b[39mFalse\u001b[39;00m)\n",
-      "Cell \u001b[0;32mIn[17], line 93\u001b[0m, in \u001b[0;36msonic_experiment\u001b[0;34m(size, aL, aR, aO, k, u, v, w, n, q, save, load)\u001b[0m\n\u001b[1;32m     90\u001b[0m g_max \u001b[39m=\u001b[39m \u001b[39m6\u001b[39m \u001b[39m*\u001b[39m n\n\u001b[1;32m     92\u001b[0m s1Y \u001b[39m=\u001b[39m field\u001b[39m.\u001b[39meval_poly_X(sXY[\u001b[39m0\u001b[39m], sXY[\u001b[39m1\u001b[39m], \u001b[39m1\u001b[39m)\n\u001b[0;32m---> 93\u001b[0m kY \u001b[39m=\u001b[39m field\u001b[39m.\u001b[39mmul_by_const(neg_kXY[\u001b[39m0\u001b[39m][\u001b[39m0\u001b[39m], \u001b[39m-\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[1;32m     94\u001b[0m kY\n\u001b[1;32m     95\u001b[0m \u001b[39m# setup: commit Sy, k\u001b[39;00m\n",
-      "\u001b[0;31mUnboundLocalError\u001b[0m: local variable 'neg_kXY' referenced before assignment"
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
